# pointcloudset

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE.md  Makefile  OPEN_ISSUES_OPEN3d.md  README.md  README.rst  REMOVE_PYNTCLOUD.MD  build_docker_local.sh  changelog.html  commandline_interface.html  description_python_api.html  docker_build.sh  genindex.html  getting_started_contribution.html  guidelines.html  how_to_contribute.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js  setup.py  support.html
.devcontainer/: Dockerfile  Dockerfile.txt  dev.Dockerfile  devcontainer.json  requirements.txt
.doctrees/: changelog.doctree  commandline_interface.doctree  description_python_api.doctree  getting_started_contribution.doctree  guidelines.doctree  how_to_contribute.doctree  index.doctree  support.doctree
.doctrees/python-api/: pointcloudset.cluster.doctree  pointcloudset.cluster.numba.doctree  pointcloudset.dataset.doctree  pointcloudset.dataset_core.doctree  pointcloudset.diff.doctree  pointcloudset.diff.nearest.doctree  pointcloudset.diff.origin.doctree  pointcloudset.diff.plane.doctree  pointcloudset.diff.point.doctree  pointcloudset.diff.pointcloud.doctree  pointcloudset.doctree  pointcloudset.filter.doctree  pointcloudset.filter.stat.doctree  pointcloudset.geometry.doctree  pointcloudset.geometry.plane.doctree  pointcloudset.geometry.point.doctree  pointcloudset.io.dataset.dir.doctree  pointcloudset.io.dataset.doctree  pointcloudset.io.dataset.pointcloud.doctree  pointcloudset.io.dataset.ros.doctree  pointcloudset.io.doctree  pointcloudset.io.pointcloud.csv.doctree  pointcloudset.io.pointcloud.delimited.doctree  pointcloudset.io.pointcloud.doctree  pointcloudset.io.pointcloud.las.doctree  pointcloudset.io.pointcloud.pandas.doctree  pointcloudset.io.pointcloud.pcd.doctree  pointcloudset.io.pointcloud.xyz.doctree  pointcloudset.pipeline.delayed_result.doctree  pointcloudset.pipeline.doctree  pointcloudset.plot.dataset.doctree  pointcloudset.plot.doctree  pointcloudset.plot.pointcloud.doctree  pointcloudset.pointcloud.doctree  pointcloudset.pointcloud_core.doctree
.doctrees/tutorial_notebooks/: Working_with_kitti_dataset.doctree  reading_las_pcd.doctree  usage.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: conda.yml  dacker_release.yml  doc.yml  docker.yml  docker_base.yml  docker_release.yml  learn-github-actions.yml  make_test.yml  publish_on_conda.yml  publish_on_pypi.yml  tests.yml  tests_docker.yml
_sources/: commandline_interface.rst.txt  description_python_api.rst.txt  getting_started_contribution.rst.txt  guidelines.rst.txt  index.rst.txt
_sources/python-api/: pointcloudset.cluster.numba.rst.txt  pointcloudset.cluster.rst.txt  pointcloudset.config.rst.txt  pointcloudset.dataset.rst.txt  pointcloudset.dataset_core.rst.txt  pointcloudset.diff.nearest.rst.txt  pointcloudset.diff.origin.rst.txt  pointcloudset.diff.plane.rst.txt  pointcloudset.diff.point.rst.txt  pointcloudset.diff.pointcloud.rst.txt  pointcloudset.diff.rst.txt  pointcloudset.filter.rst.txt  pointcloudset.filter.stat.rst.txt  pointcloudset.geometry.plane.rst.txt  pointcloudset.geometry.point.rst.txt  pointcloudset.geometry.rst.txt  pointcloudset.io.dataset.bag.rst.txt  pointcloudset.io.dataset.dir.rst.txt  pointcloudset.io.dataset.pointcloud.rst.txt  pointcloudset.io.dataset.ros.rst.txt  pointcloudset.io.dataset.rst.txt  pointcloudset.io.pointcloud.csv.rst.txt  pointcloudset.io.pointcloud.delimited.rst.txt  pointcloudset.io.pointcloud.las.rst.txt  pointcloudset.io.pointcloud.open3d.rst.txt  pointcloudset.io.pointcloud.pandas.rst.txt  pointcloudset.io.pointcloud.pcd.rst.txt  pointcloudset.io.pointcloud.pyntcloud.rst.txt  (+11 more)
conda/: conda_build_config.yaml  environment.yml  hatch_testing.md  meta.yaml
docker/: .bashrc  Dockerfile  base.Dockerfile  environment.yml  python_logging.conf  release.Dockerfile
images/: classes.drawio
lidar/: __init__.py  config.py  dataset.py  dataset_core.py  frame.py  frame_core.py
notebooks/: bag2parquet.py  big_file_test copy.ipynb  big_file_test.ipynb  dask_test.ipynb  dask_test2.ipynb  geo_pandas_test.ipynb  reading_las.ipynb  th-1.0_las_test.ipynb  th-1.1_las_test.ipynb  usage.html  usage.ipynb  usage.py
paper/: compile.txt  paper.bib  paper.md
pointcloudset/: __init__.py  config.py  dataset.py  dataset_core.py  frame.py  frame_core.py  pointcloud.py  pointcloud_core.py
python-api/: pointcloudset.cluster.html  pointcloudset.cluster.numba.html  pointcloudset.config.html  pointcloudset.dataset.html  pointcloudset.dataset_core.html  pointcloudset.diff.html  pointcloudset.diff.nearest.html  pointcloudset.diff.origin.html  pointcloudset.diff.plane.html  pointcloudset.diff.point.html  pointcloudset.diff.pointcloud.html  pointcloudset.filter.html  pointcloudset.filter.stat.html  pointcloudset.geometry.html  pointcloudset.geometry.plane.html  pointcloudset.geometry.point.html  pointcloudset.html  pointcloudset.io.dataset.bag.html  pointcloudset.io.dataset.dir.html  pointcloudset.io.dataset.html  pointcloudset.io.dataset.pointcloud.html  pointcloudset.io.dataset.ros.html  pointcloudset.io.html  pointcloudset.io.pointcloud.csv.html  pointcloudset.io.pointcloud.delimited.html  pointcloudset.io.pointcloud.html  pointcloudset.io.pointcloud.las.html  pointcloudset.io.pointcloud.open3d.html  pointcloudset.io.pointcloud.pandas.html  pointcloudset.io.pointcloud.pcd.html  pointcloudset.io.pointcloud.pyntcloud.html  pointcloudset.io.pointcloud.xyz.html  pointcloudset.pipeline.delayed_result.html  pointcloudset.pipeline.html  pointcloudset.plot.dataset.html  pointcloudset.plot.html  pointcloudset.plot.pointcloud.html  pointcloudset.pointcloud.html  pointcloudset.pointcloud_core.html
tests/: __init__.py  conftest.py
tutorial_notebooks/: Working_with_kitti_dataset.html  Working_with_kitti_dataset.ipynb  reading_las_pcd.html  reading_las_pcd.ipynb  usage.html  usage.ipynb
(+278 files in other folders)
